@@ -1,5 +1,9 @@
 2015-09-10  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/67523
+	* gimplify.c (gimplify_omp_for): If inner stmt is not found
+	for combined loop, assert seen_error () and return GS_ERROR.
+
 	PR middle-end/67521
 	* gimplify.c (gimplify_omp_for): Don't call omp_add_variable
 	if decl is already in outer->variables.
